docs: auth controller docs
